kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: simple-java-app
  namespace: demo-ns
  labels:
    app: simple-java-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: simple-java-app

  template:
    metadata:
      labels:
        app: simple-java-app

    spec:
      containers:
        - name: simple-java-app
          image: lokeshdevops01/java-eks-app:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
